<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A61AC">

    <ImageView
        android:id="@+id/lbrain"
        android:layout_width="136dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/iimage1" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:background="@drawable/iiectangle5"
        android:drawableStart="@drawable/account"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:background="@drawable/iiectangle5"
        android:drawableStart="@drawable/lock6"
        android:ems="10"
        android:paddingStart="5dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button7"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button1"
        android:text="@string/sign_up"
        android:textColor="#DCDDE1" />

    <Button
        android:id="@+id/button8"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button7"
        android:layout_marginBottom="45dp"
        android:background="@drawable/button1"
        android:text="@string/login"
        android:textColor="#DCDDE1"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button8"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textColor="#DCDDE1"
        android:textSize="15dp" />


</RelativeLayout>