<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A61AC"
    tools:context=".start">

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="79dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/irectangle2"
        android:fontFamily="@font/acme"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColorLink="@android:color/holo_green_light"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="79dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:background="@drawable/irectangle3"
        android:fontFamily="@font/acme"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColorLink="@android:color/holo_green_light"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start1"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="173dp"
        android:background="@drawable/button1"
        android:fontFamily="@font/acme"
        android:text="@string/start"
        android:textColor="#DCDDE1"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>